[package]
name = "chd2iso-fuse"
version = "0.2.36"
edition = "2021"
authors = ["Lloyd Smart <lloydsmart@users.noreply.github.com>"]
description = "FUSE filesystem to mount CHD images as ISO/BIN on the fly"
license = "MIT"
repository = "https://github.com/lloydsmart/chd2iso-fuse"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fuser = "0.16"
lru = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std"] }
time = { version = "0.3", features = ["macros"] }
libc = "0.2"
chd = "0.3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
# Internal: enables docs/manpage verification code paths used in CI.
doccheck = []
